--- a/www/css/slidetounlock.css
+++ b/www/css/slidetounlock.css
@@ -21,9 +21,11 @@ body {
 	-moz-border-radius: 30px;
 	border-radius: 30px;
 	
-	background: -moz-linear-gradient(top, #010101, #181818);
+   background: black;
+	/*background: -moz-linear-gradient(top, #010101, #181818);
 	background: -webkit-gradient(linear,left top,left bottom,color-stop(0, #010101),color-stop(1, #181818));
-	
+	*/
+   
 	border: 2px solid #454545; 
 	overflow: hidden; 
 	
@@ -33,6 +35,7 @@ body {
 #slidetounlock h2 {
   background: -moz-linear-gradient(left, #4d4d4d, 0.4, #4d4d4d, 0.5, white, 0.6, #4d4d4d, #4d4d4d); 
   background: -webkit-gradient(linear,left top,right top,color-stop(0, #4d4d4d),color-stop(0.4, #4d4d4d),color-stop(0.5, white),color-stop(0.6, #4d4d4d),color-stop(1, #4d4d4d)); 
+  background: black;
   
   -moz-background-clip: text;
   -webkit-background-clip: text;
@@ -42,12 +45,12 @@ body {
   
   -webkit-animation: slidetounlock 5s infinite;
   
-  font-size: 80px;
+  font-size: 40px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   
   padding: 0;
-  width: 200%;
+  width: 100%;
   
   -webkit-text-size-adjust: none;
 }
