--- a/www/css/slidetounlock.css
+++ b/www/css/slidetounlock.css
@@ -21,10 +21,11 @@ body {
 	-moz-border-radius: 30px;
 	border-radius: 30px;
 	
-   background: black;
+   
 	/*background: -moz-linear-gradient(top, #010101, #181818);
 	background: -webkit-gradient(linear,left top,left bottom,color-stop(0, #010101),color-stop(1, #181818));
 	*/
+   background: black;
    
 	border: 2px solid #454545; 
 	overflow: hidden; 
@@ -33,9 +34,11 @@ body {
 }
 
 #slidetounlock h2 {
+  /*
   background: -moz-linear-gradient(left, #4d4d4d, 0.4, #4d4d4d, 0.5, white, 0.6, #4d4d4d, #4d4d4d); 
   background: -webkit-gradient(linear,left top,right top,color-stop(0, #4d4d4d),color-stop(0.4, #4d4d4d),color-stop(0.5, white),color-stop(0.6, #4d4d4d),color-stop(1, #4d4d4d)); 
   background: black;
+  */
   
   -moz-background-clip: text;
   -webkit-background-clip: text;
